- ChunkUnloadEvent now also compares worlds before aborting door movement. Thanks, @IkHeetRemco_ for the bug report!
- Fixed error on player join when trying to send a resource pack to a player that was not allowed to join. Thanks, @Relaxing for the bug report!

Alpha 0.1.8.10
- Fixed being able to modify properties of doors you have no access to via direct commands when using doorUIDs.
- Fixed PlotSquared compatibility in both old and new versions of PlotSquared. Thanks, @mindw0rm for the bug report!
- Added protection hook for GriefPrevention. Thanks, @tobugs for the suggestion!

Alpha 0.1.8.9
- Introduced "/killbigdoorsentities" command to kill all entities created by this plugin.

Alpha 0.1.8.8
- Fixed bounds checking for rotation point of doors and drawbridges. Thanks, @Blaster76606 for the bug report!
- Fixed incorrect import. Auto-updater will work again. Thanks, @Auroman for the bug report!
- 1 wide drawbridges are now allowed, but only if created when flat!

Alpha 0.1.8.7
- Fixed missing openDirection option for the portcullis type. Thanks, @RetroCh1cken for the bug report!
- Fixed autoCloseTimers potentially overlapping. Thanks, @RetroCh1cken for the bug report!
- Selection tool is removed from player's inventory if they log out before finishing or timing out any process involving a selection tool.
- Selection tool cannot be moved into chests etc anymore.
- Soft removed Elevator door type to avoid confusion. When reintroduced (with elevating capabilities), they'll show up as elevators again. Until then, they look and function like portcullises.
- Removed 1 block depth restriction from portcullises.
- Added support for 1.14's new blocks.
- Added missing multipliers for the new door types to the config. Thanks, @kristinr96 for the report!
- Instead of a single powerblocktype, the config now accepts a list of materials.
- Fixed NPE thrown by bypassCompat when checking for offline players. Thanks, @bolleboor and @mafen for the bug reports! 