@@ -116,20 +116,20 @@ CREATOR.GENERAL.NoPermissionHere=§4You are not allowed to create a door here by
 CREATOR.GENERAL.InsufficientFunds=§4You have insufficient funds to create this door! You'd need:
 CREATOR.GENERAL.MoneyWithdrawn=§2Money withdrawn from your account:
 CREATOR.GENERAL.TooManyBlocks=§4You are not allowed to create a door this big. Your size limit is:
-CREATOR.PBRELOCATOR.Init=&aPower Block Relocation process initiated! You have 20 seconds to complete it.\nType /BDCancel to cancel the process.
+CREATOR.PBRELOCATOR.Init=&aPower Block Relocation process initiated! You have 40 seconds to complete it.\nType /BDCancel to cancel the process.
 CREATOR.PBRELOCATOR.StickLore=This tool is used to change the location of a power block.\nSimply hit a new block and you can use that as the location.
 CREATOR.PBRELOCATOR.StickReceived=§2You have been given a Big Door Relocator stick! You can use this tool to change the location of a powerblock. Just hit a new block!
 CREATOR.PBRELOCATOR.LocationInUse=§cInvalid Power Block Location selected! Location already in use by another door!
 CREATOR.PBRELOCATOR.Success=§2Power Block Relocation successful! Don't forget to put a powerblock (default: Gold block) here! Otherwise, it won't work!
-CREATOR.PBINSPECTOR.Init=&aPower Block Inspection process initiated! You have 20 seconds to complete it.\nType /BDCancel to cancel the process.
+CREATOR.PBINSPECTOR.Init=&aPower Block Inspection process initiated! You have 40 seconds to complete it.\nType /BDCancel to cancel the process.
 CREATOR.PBINSPECTOR.StickLore=This tool is used to inspect a power block.\nSimply hit a block and you will get the info of the door attached to it.
 CREATOR.PBINSPECTOR.StickReceived=§2You have been given a Big Door Power Block Inspector Stick! You can use this tool to inspect a powerblock. Just hit a block!
-CREATOR.PORTCULLIS.Init=&aPortcullis creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the door creation process.
+CREATOR.PORTCULLIS.Init=&aPortcullis creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the door creation process.
 CREATOR.PORTCULLIS.Success=§2Portcullis creation process successful!
 CREATOR.PORTCULLIS.Step1=§aStep 1/2: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the portcullis.
 CREATOR.PORTCULLIS.StickLore=This tool is used to create portcullises.\nPlease specify the region by smacking the two opposing corners.
 CREATOR.PORTCULLIS.StickReceived=§aYou have been given a Portcullis Creator Stick! You will have to define the region of the portcullis.\nPlease select the first end corner of the door first.
-CREATOR.DRAWBRIDGE.Init=&aDrawbridge creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the door creation process.
+CREATOR.DRAWBRIDGE.Init=&aDrawbridge creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the door creation process.
 CREATOR.DRAWBRIDGE.StickLore=This tool is used to create drawbridges.\nFirst specify the region of the drawbridge\nThen specify the rotation point
 CREATOR.DRAWBRIDGE.StickReceived=§aYou have been given a Drawbridge Creator Stick! You will have to define the region of the portcullis first.\nPlease select the first end corner of the door first.
 CREATOR.DRAWBRIDGE.Success=§2Drawbridge creation successful!
@@ -137,23 +137,23 @@ CREATOR.DRAWBRIDGE.Step1=§aStep 1/3: First point selected! Please select a seco
 CREATOR.DRAWBRIDGE.Step2=§aStep 2/3: Second point selected! Please select a first rotation point (aka the hinghe).\nThis is the column of blocks around which the entire door will swing.
 CREATOR.DRAWBRIDGE.Success=§aDraw bridge creation process successful!
 CREATOR.DRAWBRIDGE.Step3=§2Step 3/4: First rotation point selected! Please select a second rotation point on the same axis to prevent ambiguity.
-CREATOR.ELEVATOR.Init=&aElevator creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the elevator creation process.
+CREATOR.ELEVATOR.Init=&aElevator creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the elevator creation process.
 CREATOR.ELEVATOR.Success=§aElevator creation process successful!
 CREATOR.ELEVATOR.Step1=§aStep 1/2: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the elevator.
 CREATOR.ELEVATOR.StickLore=This tool is used to create elevators.\nPlease specify the region by smacking the two opposing corners.
 CREATOR.ELEVATOR.StickReceived=§aYou have been given a Elevators Creator Stick! You will have to define the region of the elevators.\nPlease select the first end corner of the door first.
-CREATOR.SLIDINGDOOR.Init=&aSliding Door creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the sliding door creation process.
+CREATOR.SLIDINGDOOR.Init=&aSliding Door creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the sliding door creation process.
 CREATOR.SLIDINGDOOR.Success=§aSliding Door creation process successful!
 CREATOR.SLIDINGDOOR.Step1=§aStep 1/2: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the sliding door.
 CREATOR.SLIDINGDOOR.StickLore=This tool is used to create sliding doors.\nPlease specify the region by smacking the two opposing corners.
 CREATOR.SLIDINGDOOR.StickReceived=§aYou have been given a Sliding Door Creator Stick! You will have to define the region of the sliding doors.\nPlease select the first end corner of the door first.
-CREATOR.DOOR.Init=&aDoor creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the door creation process.
+CREATOR.DOOR.Init=&aDoor creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the door creation process.
 CREATOR.DOOR.StickLore=This tool is used to create big doors.\nFirst specify the region of the door\nThen specify the rotation point
 CREATOR.DOOR.StickReceived=§aYou have been given a Big Door Creator Stick! You will have to define the region of the door first.\nPlease select the first end corner of the door first.
 CREATOR.DOOR.Step1=§aStep 1/3: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the door.
 CREATOR.DOOR.Step2=§aStep 2/3: Second point selected! Please select the rotation point (AKA the hinge).\nThis is the column of blocks around which the entire door will swing.
 CREATOR.DOOR.Success=§2Door creation successful!
-CREATOR.FLAG.Init=&aFlag creation process initiated! You have 60 seconds to complete it.\nType /BDCancel to cancel the door creation process.
+CREATOR.FLAG.Init=&aFlag creation process initiated! You have 120 seconds to complete it.\nType /BDCancel to cancel the door creation process.
 CREATOR.FLAG.StickReceived=§aYou have been given a Big Door Creator Stick! You will have to define the region of the flag first.\nPlease select the first end corner of the flag first.
 CREATOR.FLAG.Step1=§aStep 1/3: First point selected! Please select a second point!\nThe second point should be as far away from the first point while still being on the flag.
 CREATOR.FLAG.Step2=§aStep 2/3: Second point selected! Please select the point where the flag is attached to the pole.
